# financial-scraper

./: .env  Cargo.toml  render.yaml
docker/: Dockerfile  docker-compose.yaml
entity/: Cargo.toml
entity/src/: lib.rs  recessions.rs  sp_500_daily.rs  sp_500_monthly.rs  stock_asset_allocation.rs  unemployment_rate.rs
graphql/: Cargo.toml
graphql/src/: lib.rs  schema.rs  server.rs
graphql/src/format/: mod.rs
graphql/src/ide/: altair.rs  mod.rs
graphql/src/objects/: mod.rs
lib/: Cargo.toml
lib/src/: crypto.rs  error.rs  lib.rs  serde.rs  time.rs
migrations/: 20241112182405_init_tables.sql  20241112182826_add_analysis_schema.sql
service/: Cargo.toml
service/src/: client.rs  lib.rs
service/src/database/: mod.rs  queries.rs
service/src/scraper/: mod.rs  recession.rs  sp500.rs  stock_asset_allocation.rs
src/: main.rs
