[package]
name = "financial-scraper"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "entity",
    "lib",
    "service",
]
resolver = "2"

[dependencies]
[workspace.dependencies]
sqlx = { version = "0.8.2", features = ["rust_decimal", "postgres", "chrono", "uuid", "runtime-tokio-native-tls"] }
chrono = "0.4.38"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.132"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.16.1", features = ["full"] }
thiserror = { version = "1.0.42"}
error-stack = "0.5.0"
hex = "0.4.3"
bigdecimal = "0.4.6"
ethers = { version = "2.0.14", features = ["rustls"] }
csv = "1.1.6"