[package]
name = "lib"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ethers = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
bigdecimal = { workspace = true }
