[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "macros", "json","rust_decimal", "chrono", "postgres"] }
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full"] }
serde_json = { version = "1.0.68", features = ["raw_value"] }
reqwest = { version = "0.12.9", features = ["json"] }
lib = { path = "../lib" }
entity = { path = "../entity" }
yahoo_finance_api = { version = "2.3.0", features = ["rust_decimal", "decimal"] }
calamine = { version = "0.26.1" , features = ["chrono", "dates"] }
rust_decimal = {version = "1.36.0", features = ["serde"]}
csv = { version = "1.3.1" }